Update README with instructions on running the program